--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,17 @@ footer {
   margin-top: 50px;
 }
 
+.one-page-footer {
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
 footer div {
   height: 100%;
   width: max-content;
