--- a/views/contact.html
+++ b/views/contact.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+
+  <div id="page-container">
+    
   <nav>
     <div class="sidebar">
       <a class="close-icon" href="#" onclick="CloseSidebar()"><img src="../images/CloseIcon.png" alt="MN logo" /></a>
@@ -56,7 +59,7 @@
   </div>
 
 
-  <footer>
+  <footer class="one-page-footer">
     <div class="flex-container">
       <a href="https://github.com/m-nijenhuis" target="_blank"><img src="../images/github-icon-2.svg" alt="github logo"></a>
       <a href="https://linkedin.com" target="_blank"><img src="../images/linkedin-app-white-icon.webp" alt="linkedin logo"></a>
@@ -64,6 +67,7 @@
     <p>©Michiel Nijenhuis</p>
   </footer>
 
+  </div>
 
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/navbarHover.js"></script>
