Added a thank page for message and added my portfolio design to the projects page

--- a/css/contact.css
+++ b/css/contact.css
@@ -41,6 +41,7 @@ body {
 }
 
 .grey-breakline {
+  margin-left: 20px;
   width: 80%;
   height: 1px;
   background-color: #979797;
@@ -131,4 +132,14 @@ body {
   .inputs-container {
     width: 100%;
   }
+
+  .text-container {
+    font-size: 25px;
+  }
+
+  .text-container p:last-of-type, a {
+    font-size: 20px;
+  }
+
+
 }
