--- a/css/projects.css
+++ b/css/projects.css
@@ -42,6 +42,9 @@ body {
 .todo-container {
   background-color: #212121;
 }
+.portfolio-container {
+  background-color: #212121;
+}
 
 .text-info-container {
   width: 100%;
