--- a/views/about-me.html
+++ b/views/about-me.html
@@ -44,7 +44,7 @@
 
         <div class="about-me-text-container">
           <p>
-            Hallo mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en
+            Mijn naam is <span>Michiel Nijenhuis</span>, Ik ben 16 jaar en
             zit in het eerste jaar van de opleiding Software Developer. Ik
             programmeer met passie en leer graag. Ik heb ervaring met HTML5,
             CSS3, Javascript, node.js en SQL. Ook heb ik games gemaakt in unity
