--- a/views/contact.html
+++ b/views/contact.html
@@ -40,7 +40,7 @@
       <div class="text-container">
         <p>Ik vind het super leuk dat je mijn portfolio hebt bekeken. Als je misschien contact op wil nemen kan dat natuurlijk. Ik hoor graag van je.</p> 
         <div class="grey-breakline"></div> 
-        <p>Contact je liever via de mail?</p>
+        <p>Stuur je liever een directe mail?</p>
         <a href="mailto:contact@michielnijenhuis.com">contact@michielnijenhuis.com</a>
       </div>
 
@@ -53,6 +53,8 @@
       <input type="email" name="email" value="" placeholder="jouw@email.com" required>
       <p class="input-title">Bericht</p> 
       <textarea name="message" placeholder="Schrijf hier je bericht" required></textarea>
+
+      <input type="hidden" name="redirect" value="https://michielnijenhuis.com/thanks.html">
 
       <button class="btn" type="submit">Stuur je bericht</button>
     </form>
