--- a/views/projects.html
+++ b/views/projects.html
@@ -27,20 +27,25 @@
       <a class="nav-link hide-on-mobile" href="about-me.html">OVER MIJ</a>
       <a class="nav-link active-tab hide-on-mobile" href="projects.html">PROJECTEN</a>
       <a class="nav-link hide-on-mobile" href="contact.html">CONTACT</a>
-      <a class="nav-link menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt=""></a>
+      <a class="nav-link menu-icon" onclick="OpenSidebar()"><img src="../images/HamburgerIcon.png" alt="" /></a>
     </div>
   </nav>
 
   <div class="project-container">
     <div class="project-grid-container" id="section1">
-      <div class="img-container"><img src="../images/Kloezeman-logo-licht.png" alt="Kloezeman logo"></div>
+      <div class="img-container">
+        <img src="../images/Kloezeman-logo-licht.png" alt="Kloezeman logo" />
+      </div>
       <div class="text-info-container">
         <h2>N.Kloezeman</h2>
         <p>
-          Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd. Ik heb voor die klant daarna ook een
-          website gemaakt. Ik vind dit een van mijn coolste projecten want het is voor een klant en ik heb er veel van
-          geleerd tijdens het maken. De klant is erg tevreden en daar ben ik heel blij mee. Dit is dan een simpele
-          website met eingelijk alleen front-end, maar het is toch geweldig dat ik dit heb mogen maken.
+          Dit is het logo die ik voor een klant heb gemaakt in mijn vrijetijd.
+          Ik heb voor die klant daarna ook een website gemaakt. Ik vind dit
+          een leuk project want het is voor een iemand anders en ik heb er
+          veel van geleerd tijdens het maken. Dit is dan een simpele website
+          met eingelijk alleen front-end, maar het is toch super leuk dat ik
+          dit heb gemaakt. Het is nog steeds onder ontwikkeling dus er komen
+          nog meer updates.
         </p>
       </div>
     </div>
@@ -50,17 +55,41 @@
 
   <div class="project-container" id="section2">
     <div class="project-grid-container">
-      <div class="img-container todo-container"><img src="../images/Todo-app.png" alt="Todo-app image"></div>
+      <div class="img-container todo-container">
+        <img src="../images/Todo-app.png" alt="Todo-app image" />
+      </div>
       <div class="text-info-container">
         <h2>Todo app</h2>
         <p>
-          Dit een kleine todo webapp. Dit project was vooral veel gefocust op de database en de backend functionaliteit.
-          Maar ik vond
-          het wel leuk om op mijn portfolio te zetten. Het is gewoon een simpele todo app. Ik heb voor de strakke stijl
-          gekozen. Je kan
-          todo's toevoegen, verwijderen, veranderen en afvinken. Ik heb ook de tijd toegevoegd als een onderdeel van het
-          todo item. Als de tijd voorbij de tijd van het todo item is en je vinkt het item af, dan word het verwijdert.
-          Maar als de echte tijd nog niet de tijd van het todo item is geweest, dan blijft het staan.
+          Dit een kleine todo webapp. Dit project was vooral veel gefocust op
+          de database en de backend functionaliteit. Maar ik vond het wel leuk
+          om op mijn portfolio te zetten. Het is gewoon een simpele todo app.
+          Ik heb voor de strakke stijl gekozen. Je kan todo's toevoegen,
+          verwijderen, veranderen en afvinken. Ik heb ook de tijd toegevoegd
+          als een onderdeel van het todo item. Als de echte tijd voorbij de
+          tijd van het todo item is en je vinkt het item af, dan word het
+          verwijdert. Maar als de echte tijd nog niet de tijd van het todo
+          item is geweest, dan blijft het staan.
+        </p>
+      </div>
+    </div>
+
+    <div class="underline"></div>
+  </div>
+
+  <div class="project-container" id="section2">
+    <div class="project-grid-container">
+      <div class="img-container portfolio-container">
+        <img src="../images/portfolio-design.png" alt="Todo-app image" />
+      </div>
+      <div class="text-info-container">
+        <h2>Mijn portfolio website</h2>
+        <p>
+          Dit is de home pagina van mijn portfolio website. Ik heb het zelf
+          ontworpen en natuurlijk ook zelf geprogrammeerd. Ik heb alle
+          pagina’s eerst goed ontworpen en daara geprogrammeerd. Ik heb goed
+          nagedacht over kleur en de layout. Ik vond het een erg leuk project
+          om te maken.
         </p>
       </div>
     </div>
@@ -70,15 +99,18 @@
 
   <div class="extra-info-container">
     <p>
-      Ik heb nog meer projecten gemaakt maar niet echt afgemaakt :( Ik ga de komende tijd veel meer maken en er komt
-      zeker mee op te staan maar voor nu is het wat leeg
+      Ik heb nog meer projecten gemaakt maar niet echt afgemaakt :( Ik ga de
+      komende tijd veel meer maken en er komt zeker mee op te staan maar voor
+      nu is het wat leeg
     </p>
   </div>
 
   <footer>
     <div class="flex-container">
-      <a href="https://github.com/m-nijenhuis" target="_blank"><img src="../images/github-icon-2.svg" alt="github logo"></a>
-      <a href="https://linkedin.com" target="_blank"><img src="../images/linkedin-app-white-icon.webp" alt="linkedin logo"></a>
+      <a href="https://github.com/m-nijenhuis" target="_blank"><img src="../images/github-icon-2.svg"
+          alt="github logo" /></a>
+      <a href="https://linkedin.com" target="_blank"><img src="../images/linkedin-app-white-icon.webp"
+          alt="linkedin logo" /></a>
     </div>
     <p>©Michiel Nijenhuis</p>
   </footer>
