--- a/views/contact.html
+++ b/views/contact.html
@@ -74,6 +74,7 @@
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/navbarHover.js"></script>
   <script src="../javascript/textareaHeight.js"></script>
+  <script src="../javascript/updateCss.js"></script>
 </body>
 
 </html>
