--- a/views/about-me.html
+++ b/views/about-me.html
@@ -82,6 +82,7 @@
   <script src="../javascript/scroll.js"></script>
   <script src="../javascript/navbarHover.js"></script>
   <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/pageContentScan.js"></script>
 </body>
 
 </html>
