--- a/views/contact.html
+++ b/views/contact.html
@@ -75,6 +75,7 @@
   <script src="../javascript/navbarHover.js"></script>
   <script src="../javascript/textareaHeight.js"></script>
   <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/pageContentScan.js"></script>
 </body>
 
 </html>
