--- a/css/contact.css
+++ b/css/contact.css
@@ -75,7 +75,7 @@ body {
 .inputs-container textarea {
   box-sizing: border-box;
   width: 100%;
-  height: auto;
+  height: 80px;
   color: white;
   background-color: rgba(0, 0, 0, 0);
   border: none;
