--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,15 @@ body {
   color: white;
 }
 
+::-moz-selection { /* Code for Firefox */
+  background-color: #ce0f0f;
+}
+
+::selection {
+  color: white;
+  background-color: #ce0f0f;
+}
+
 .logo-container {
   width: 100%;
   height: fit-content;
