--- a/css/projects.css
+++ b/css/projects.css
@@ -6,6 +6,14 @@ body {
   color: white;
 }
 
+::-moz-selection { /* Code for Firefox */
+  background-color: #ce0f0f;
+}
+
+::selection {
+  color: white;
+  background-color: #ce0f0f;
+}
 
 .project-container {
   width: 90%;
