Added version numbers to the script tags to links js files

--- a/views/contact.html
+++ b/views/contact.html
@@ -71,11 +71,11 @@
 
   </div>
 
-  <script src="../javascript/sidebar.js"></script>
-  <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/textareaHeight.js"></script>
-  <script src="../javascript/updateCss.js"></script>
-  <script src="../javascript/pageContentScan.js"></script>
+  <script src="../javascript/sidebar.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/navbarHover.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/textareaHeight.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/updateCss.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/pageContentScan.js?ts=<?= time() ?>"></script>
 </body>
 
 </html>
