--- a/views/index.html
+++ b/views/index.html
@@ -93,10 +93,10 @@
   </footer>
 
 
-  <script src="../javascript/index.js"></script>
-  <script src="../javascript/sidebar.js"></script>
-  <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/index.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/sidebar.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/navbarHover.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/updateCss.js?ts=<?= time() ?>"></script>
 </body>
 
 </html
