--- a/views/projects.html
+++ b/views/projects.html
@@ -115,9 +115,9 @@
     <p>©Michiel Nijenhuis</p>
   </footer>
 
-  <script src="../javascript/sidebar.js"></script>
-  <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/sidebar.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/navbarHover.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/updateCss.js?ts=<?= time() ?>"></script>
 </body>
 
 </html>
