--- a/views/about-me.html
+++ b/views/about-me.html
@@ -78,11 +78,11 @@
     </footer>
   </div>
 
-  <script src="../javascript/sidebar.js"></script>
-  <script src="../javascript/scroll.js"></script>
-  <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/updateCss.js"></script>
-  <script src="../javascript/pageContentScan.js"></script>
+  <script src="../javascript/sidebar.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/scroll.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/navbarHover.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/updateCss.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/pageContentScan.js?ts=<?= time() ?>"></script>
 </body>
 
 </html>
