--- a/views/contact.html
+++ b/views/contact.html
@@ -11,6 +11,17 @@
   <link href="../css/footer.css" rel="stylesheet" />
 </head>
 
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const scripts = document.querySelectorAll('script[src]');
+    scripts.forEach((script) => {
+      const src = script.getAttribute('src');
+      const cacheBustedSrc = `${src}${src.includes('?') ? '&' : '?'}v=${Date.now()}`;
+      script.setAttribute('src', cacheBustedSrc);
+    });
+  });
+</script>
+
 <body>
 
   <div id="page-container">
@@ -71,11 +82,11 @@
 
   </div>
 
-  <script src="../javascript/sidebar.js?ts=<?= time() ?>"></script>
-  <script src="../javascript/navbarHover.js?ts=<?= time() ?>"></script>
-  <script src="../javascript/textareaHeight.js?ts=<?= time() ?>"></script>
-  <script src="../javascript/updateCss.js?ts=<?= time() ?>"></script>
-  <script src="../javascript/pageContentScan.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
+  <script src="../javascript/textareaHeight.js"></script>
+  <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/pageContentScan.js"></script>
 </body>
 
 </html>
