--- a/views/projects.html
+++ b/views/projects.html
@@ -11,6 +11,17 @@
   <link href="../css/projects.css" rel="stylesheet" />
 </head>
 
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const scripts = document.querySelectorAll('script[src]');
+    scripts.forEach((script) => {
+      const src = script.getAttribute('src');
+      const cacheBustedSrc = `${src}${src.includes('?') ? '&' : '?'}v=${Date.now()}`;
+      script.setAttribute('src', cacheBustedSrc);
+    });
+  });
+</script>
+
 <body>
   <nav>
     <div class="sidebar">
@@ -115,9 +126,9 @@
     <p>©Michiel Nijenhuis</p>
   </footer>
 
-  <script src="../javascript/sidebar.js?ts=<?= time() ?>"></script>
-  <script src="../javascript/navbarHover.js?ts=<?= time() ?>"></script>
-  <script src="../javascript/updateCss.js?ts=<?= time() ?>"></script>
+  <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
+  <script src="../javascript/updateCss.js"></script>
 </body>
 
 </html>
