Test date in script tag

--- a/views/contact.html
+++ b/views/contact.html
@@ -71,11 +71,11 @@
 
   </div>
 
-  <script asp-append-version="true" src="../javascript/sidebar.js"></script>
-  <script asp-append-version="true" src="../javascript/navbarHover.js"></script>
-  <script asp-append-version="true" src="../javascript/textareaHeight.js"></script>
-  <script asp-append-version="true" src="../javascript/updateCss.js"></script>
-  <script asp-append-version="true" src="../javascript/pageContentScan.js"></script>
+  <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
+  <script src="../javascript/textareaHeight.js"></script>
+  <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/pageContentScan.js?v=2024-12-5"></script>
 </body>
 
 </html>
