Added a updateJs.js file to update the .js files to the newest versions

--- a/views/about-me.html
+++ b/views/about-me.html
@@ -78,11 +78,12 @@
     </footer>
   </div>
 
-  <script asp-append-version="true" src="../javascript/sidebar.js"></script>
-  <script asp-append-version="true" src="../javascript/scroll.js"></script>
-  <script asp-append-version="true" src="../javascript/navbarHover.js"></script>
-  <script asp-append-version="true" src="../javascript/updateCss.js"></script>
-  <script asp-append-version="true" src="../javascript/pageContentScan.js"></script>
+  <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/scroll.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
+  <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/pageContentScan.js"></script>
+  <script src="../javascript/updateJs.js"></script>
 </body>
 
 </html>
