--- a/views/contact.html
+++ b/views/contact.html
@@ -75,7 +75,8 @@
   <script src="../javascript/navbarHover.js"></script>
   <script src="../javascript/textareaHeight.js"></script>
   <script src="../javascript/updateCss.js"></script>
-  <script src="../javascript/pageContentScan.js?v=2024-12-5"></script>
+  <script src="../javascript/pageContentScan.js"></script>
+  <script src="../javascript/updateJs.js"></script>
 </body>
 
 </html>
