--- a/views/index.html
+++ b/views/index.html
@@ -93,10 +93,11 @@
   </footer>
 
 
-  <script src="../javascript/index.js?v=2024-12-5"></script>
+  <script src="../javascript/index.js"></script>
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/navbarHover.js"></script>
   <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/updateJs.js"></script>
 </body>
 
 </html
