--- a/views/projects.html
+++ b/views/projects.html
@@ -115,9 +115,10 @@
     <p>©Michiel Nijenhuis</p>
   </footer>
 
-  <script asp-append-version="true" src="../javascript/sidebar.js"></script>
-  <script asp-append-version="true" src="../javascript/navbarHover.js"></script>
-  <script asp-append-version="true" src="../javascript/updateCss.js"></script>
+  <script src="../javascript/sidebar.js"></script>
+  <script src="../javascript/navbarHover.js"></script>
+  <script src="../javascript/updateCss.js"></script>
+  <script src="../javascript/updateJs.js"></script>
 </body>
 
 </html>
