Changed the css and js versions files into one

--- a/views/contact.html
+++ b/views/contact.html
@@ -74,9 +74,8 @@
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/navbarHover.js"></script>
   <script src="../javascript/textareaHeight.js"></script>
-  <script src="../javascript/updateCss.js"></script>
   <script src="../javascript/pageContentScan.js"></script>
-  <script src="../javascript/updateJs.js"></script>
+  <script src="../javascript/updateVersion.js"></script>
 </body>
 
 </html>
