--- a/views/index.html
+++ b/views/index.html
@@ -96,8 +96,7 @@
   <script src="../javascript/index.js"></script>
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/updateCss.js"></script>
-  <script src="../javascript/updateJs.js"></script>
+  <script src="../javascript/updateVersion.js"></script>
 </body>
 
 </html
