--- a/views/about-me.html
+++ b/views/about-me.html
@@ -81,9 +81,8 @@
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/scroll.js"></script>
   <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/updateCss.js"></script>
   <script src="../javascript/pageContentScan.js"></script>
-  <script src="../javascript/updateJs.js"></script>
+  <script src="../javascript/updateVersion.js"></script>
 </body>
 
 </html>
