--- a/views/projects.html
+++ b/views/projects.html
@@ -117,8 +117,7 @@
 
   <script src="../javascript/sidebar.js"></script>
   <script src="../javascript/navbarHover.js"></script>
-  <script src="../javascript/updateCss.js"></script>
-  <script src="../javascript/updateJs.js"></script>
+  <script src="../javascript/updateVersion.js"></script>
 </body>
 
 </html>
